adding site title

--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -3,9 +3,7 @@
 <head>
 <title>IntrioBasket: Your Shopping Cart</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script type="text/javascript" src="assets/js/jquery.shop.js"></script>
+
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
 <meta name="author" content="MARTECH | Deer Creative Theme">
@@ -20,8 +18,12 @@
 <link rel="stylesheet" href="assets/css/icomoon.css">
 <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
 <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
-</head>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
+
+</head>
+
+
 
 
   
@@ -97,7 +99,7 @@
                   <li><a href="shop_order_complete.html">order complete</a></li>
                   <li><a href="shop_wishlist.html">wishlist</a></li>
                   <li><a href="shop_compare.html">compare</a></li>
-                  <li><a href="shop_cart.html">cart</a></li>
+                  <li><a href="shop_shop_cart.html">cart</a></li>
                 </div>
               </ul>
             </li>
@@ -163,7 +165,7 @@
                     <li><a href="shop_order_complete.html">order complete</a></li>
                     <li><a href="shop_wishlist.html">wishlist</a></li>
                     <li><a href="shop_compare.html">compare</a></li>
-                    <li><a href="shop_cart.html">cart</a></li>
+                    <li><a href="shop_shop_cart.html">cart</a></li>
                   </ul>
                 </li>
                 <li class="toggleable"> <a class="menu-item" href="blog_list_sidebar.html">Blog</a><span class="sub-menu--expander"><i class="icon_plus"></i></span>
@@ -201,7 +203,7 @@
         <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
       </div>
       <div class="col-3">
-        <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
+        <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_shop_cart.html"></a></div>
       </div>
     </div>
   </div>
@@ -217,7 +219,7 @@
   </header> -->
   <div id="content">
     <h4>Your Shopping Cart</h4>
-    <form id="shopping-cart" action="shop_cart.html" method="post">
+    <form id="shopping-cart" action="shop_shop_cart.html" method="post">
       <table class="shopping-cart">
         <thead>
         <tr>
@@ -255,6 +257,12 @@
 </div>
 
 
+
+
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="assets/js/jquery-ui.min.js"></script>
   <script src="assets/js/jquery.countdown.min.js"></script>
@@ -267,11 +275,7 @@
   <script src="assets/js/numscroller-1.0.js"></script>
   <script src="assets/js/vanilla-tilt.min.js"></script>
   <script src="assets/js/main.js"></script>
-    
 
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
-
-
+  
 </body>
 </html>	
