--- a/homepage05.html
+++ b/homepage05.html
@@ -199,7 +199,7 @@
             <div class="row">
               <div class="col-12 col-md-4 col-lg-4 col-xl-3 order-2 order-md-1">
                 <div class="department-menu_block down">
-                  <div class="department-menu d-flex justify-content-between align-items-center"><i class="fas fa-bars"></i>All departments<span><i class="arrow_carrot-up"></i></span></div>
+                  <div class="department-menu d-flex justify-content-between align-items-center"><i class="fas fa-bars"></i>CATEGORIES<span><i class="arrow_carrot-up"></i></span></div>
                   <div class="department-dropdown-menu down">
                     <ul>
                     <li> <a class="department-link" href="shop_grid+list_3col.html">MEAT & FISH</a></li>
