adding site changes

--- a/login.html
+++ b/login.html
@@ -387,5 +387,11 @@
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
-  </body>
+    
+    <script type="text/javascript" src="assets/js/signup_login.js"></script>
+
+
+  
+
+
 </html>
