--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" href="assets/images/shortcut_logo.png">
   </head>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <body>
+  <>
     <div id="main">
       <header>
         <div class="header-block d-flex align-items-center">
@@ -381,5 +381,15 @@
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
+
+
+    
+    <script type="text/javascript" src="assets/js/signup_login.js"></script>
+
+
+
+   
+
+
   </body>
 </html>
