--- a/index.html
+++ b/index.html
@@ -1254,11 +1254,11 @@
     <script src="assets/js/numscroller-1.0.js"></script>
     <script src="assets/js/vanilla-tilt.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script>
-      var sence = document.getElementById('img-block')
-      var parallaxInstance = new Parallax(sence, {
-      	hoverOnly: true,
-      });
-    </script>
+   
+
+    
+    <script type="text/javascript" src="assets/js/signup_login.js"></script>
+
+
   </body>
 </html>
