--- a/shop_detail.html
+++ b/shop_detail.html
@@ -727,5 +727,14 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
 
+    
+    <script type="text/javascript" src="assets/js/signup_login.js"></script>
+
+
+
+
+
+   
+
   </body>
 </html>
