adding site changes

--- a/index.html
+++ b/index.html
@@ -1257,7 +1257,9 @@
    
 
     
-    <script type="text/javascript" src="assets/js/signup_login.js"></script>
+    <script type="text/javascript" src="assets/js/signup.js"></script>
+    <script type="text/javascript" src="assets/js/login.js"></script>
+    <script type="text/javascript" src="assets/js/food.js"></script>
 
 
   </body>
