--- a/login.html
+++ b/login.html
@@ -388,7 +388,10 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
     
-    <script type="text/javascript" src="assets/js/signup_login.js"></script>
+    <script type="text/javascript" src="assets/js/signup.js"></script>
+    <script type="text/javascript" src="assets/js/login.js"></script>
+    <script type="text/javascript" src="assets/js/food.js"></script>
+
 
 
   
