--- a/register.html
+++ b/register.html
@@ -384,8 +384,9 @@
 
 
     
-    <script type="text/javascript" src="assets/js/signup_login.js"></script>
-
+    <script type="text/javascript" src="assets/js/signup.js"></script>
+    <script type="text/javascript" src="assets/js/login.js"></script>
+    <script type="text/javascript" src="assets/js/food.js"></script>
 
 
    
