--- a/shop_shop_cart.html
+++ b/shop_shop_cart.html
@@ -71,24 +71,11 @@
         <div class="navgition-menu d-flex align-items-center justify-content-center">
           <ul class="mb-0">
             <li class="toggleable"> <a class="menu-item" href="index.html">Home</a>
-              <ul class="sub-menu">
-                <li><a href="index.html">Homepage 1</a></li>
-                <li><a href="homepage02.html">Homepage 2</a></li>
-                <li><a href="homepage03.html">Homepage 3</a></li>
-                <li><a href="homepage04.html">Homepage 4</a></li>
-                <li><a href="homepage05.html">Homepage 5</a></li>
-              </ul>
+              
             </li>
             <li class="toggleable"> <a class="menu-item active" href="shop_grid+list_3col.html">Shop</a>
               <ul class="sub-menu shop d-flex">
-                <div class="nav-column">
-                  <h2>Layout shop</h2>
-                  <li><a href="shop_grid+list_fullwidth.html">Shop grid fullwidth</a></li>
-                  <li><a href="shop_grid+list_fullwidth.html">Shop list fullwidth</a></li>
-                  <li><a href="shop_grid+list_3col.html">shop grid 3 column</a></li>
-                  <li><a href="shop_grid+list_3col.html">shop list 3 column</a></li>
-                </div>
-                <div class="nav-column">
+              <iv class="nav-column">
                   <h2>Detail shop</h2>
                   <li><a href="shop_detail_fullwidth.html">shop detail fullwidth</a></li>
                   <li><a href="shop_detail.html">shop detail sidebar</a></li>
