integrating user registration API

--- a/login.html
+++ b/login.html
@@ -250,7 +250,7 @@
                   <div class="account-forgot"><a href="#">Forget your Password</a></div>
                 </div>
                 <div class="account-function">
-                  <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="register.html">Or create an account</a>
+                  <button class="no-round-btn" type="submit"><a href="userwelcome.html">Sign in </a></button><a class="create-account" href="register.html">Or create an account</a>
                 </div>
               </form>
             </div>
