integrating user registration API

--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Login page</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" / >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
     <meta name="author" content="MARTECH | Deer Creative Theme">
@@ -172,7 +172,7 @@
           <div class="row">
             <div class="col-12 col-md-6 mx-auto">
               <h1 class="title">Login</h1>
-              <form id="form" onsubmit="login()">
+              <form id="form" onsubmit="login()" method="post">
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="user-name" type="email" name="email">
                 <label for="password">Password *</label>
@@ -185,7 +185,7 @@
                   <div class="account-forgot"><a href="#">Forget your Password</a></div>
                 </div>
                 <div class="account-function">
-                  <button class="no-round-btn" type="submit"><a href="userwelcome.html">Sign in </a></button><a class="create-account" href="register.html">Or create an account</a>
+                  <button class="no-round-btn" type="submit">Sign in</button><a class="create-account" href="register.html">Or create an account</a>
                 </div>
               </form>
             </div>
@@ -276,7 +276,8 @@
     
     <script type="text/javascript" src="assets/js/signup.js"></script>
     <script type="text/javascript" src="assets/js/login.js"></script>
-    <script type="text/javascript" src="assets/js/food.js"></script>
+
+ 
 
   
 
