--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Sign Up page</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
     <meta name="author" content="MARTECH | Deer Creative Theme">
@@ -167,7 +167,7 @@
           <div class="row">
             <div class="col-12 col-md-6 mx-auto">
               <h1 class="title">Register</h1>
-                <form id="form" onsubmit="register()">
+                <form id="form" onsubmit="login()" method="post" >
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="user-name" type="email" name="email">
                 <label for="password">Password *</label>
@@ -265,8 +265,8 @@
 
     
     <script type="text/javascript" src="assets/js/signup.js"></script>
-    <script type="text/javascript" src="assets/js/login.js"></script>
-    <script type="text/javascript" src="assets/js/food.js"></script>
+
+    
 
 
 
