--- a/register.html
+++ b/register.html
@@ -167,7 +167,7 @@
           <div class="row">
             <div class="col-12 col-md-6 mx-auto">
               <h1 class="title">Register</h1>
-                <form id="form" onsubmit="login()" method="post" >
+                <form id="form" onsubmit="login()"  >
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="user-name" type="email" name="email">
                 <label for="password">Password *</label>
