integrating user registration API

--- a/index.html
+++ b/index.html
@@ -1064,8 +1064,9 @@
             <div class="col-12 col-sm-12 col-md-4 text-sm-center text-md-left">
               <div class="footer-logo"><img src="assets/images/logo.png" alt=""></div>
               <div class="footer-contact">
-                <p>Address: XXXXXXXXXXXXXXXXXXXXXX</p>
-                <p>Phone: +234XXXXXXXXXXXXXXXXXX</p>
+
+                <p>Address: S01, Pathfield mall, Beside Rainoil Filling Station, 4th Avenue,Gwarimpa, Abuja, F.C.T</p>
+                <p>Phone: +234456789999</p>
                 <p>Email: info@gmail.com</p>
               </div>
               <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-pinterest-p"></i></a></div>
