--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
     <meta name="author" content="MARTECH | Deer Creative Theme">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/custom_bootstrap.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
@@ -167,7 +168,7 @@
           <div class="row">
             <div class="col-12 col-md-6 mx-auto">
               <h1 class="title">Register</h1>
-                <form id="form" onsubmit="login()"  >
+                <form id="form" onsubmit="login()" method="post"  >
                 <label for="user-name">Username or email address *</label>
                 <input class="no-round-input" id="user-name" type="email" name="email">
                 <label for="password">Password *</label>
