integrating user registration API

--- a/register.html
+++ b/register.html
@@ -263,11 +263,46 @@
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
 
 
-    
-    <script type="text/javascript" src="assets/js/signup.js"></script>
+    <!--
+    <script type="text/javascript" src="assets/js/signup.js"></script> -->
 
 
     <script>
+
+    var form = document.getElementById('form')
+
+    form.addEventListener('submit' , function(e) {
+
+        e.preventDefault()
+
+        var name = document.getElementById('user-name').value
+        var password = document.getElementById('password').value
+
+        console.log(password)
+
+        fetch("http://intriobasket.pexceptos.com/api/user/create", {
+            method: 'POST',
+            body: JSON.stringify({
+                username: name,
+                passcode : password
+            }),
+            headers: {
+                "Content-Type": "application/json; charset= UTF-8"
+            }
+        })
+            .then(function (response) {
+                return response.json()
+            })
+            .then(function (data) {
+            console.log(data)
+        })
+    }
+
+
+    </script>
+
+
+
    
     
    
