--- a/post.html
+++ b/post.html
@@ -29,7 +29,7 @@
 
     console.log("Input Data: " + userid + " " + new_title + " " + new_body);
 
-    fetch('https://jsonplaceholder.typicode.com/posts', {
+    fetch('http://intriobasket.pexceptos.com/api/user/login', {
         method: 'POST',
         body: JSON.stringify({
             title: new_title,
