integrating user registration API

--- a/post.html
+++ b/post.html
@@ -9,13 +9,13 @@
 <form>
 <h1>Please type in new item data:</h1><br>
 <label class="add_label"><b>&nbsp;userId:&nbsp; </b></label>
-<input type="number" class="add_input" id="new_userId" name="new_userId" value="">
+<input type="text" class="add_input" id="new_userId" name="new_userId" value="">
 <br>
 <label class="add_label"><b>&nbsp;title:&nbsp;</b></label>
-<input type="text" class="add_input" id="new_title" name="new_title" value="">
+<input type="email" class="add_input" id="new_title" name="new_title" value="">
 <br>
 <label class="add_label"><b>&nbsp;body:&nbsp;</b></label>
-<input type="text" class="add_input" id="new_body" name="new_body" value="">
+<input type="password" class="add_input" id="new_body" name="new_body" value="">
 
 <button id="add_btn2" onclick = "New(event)">Submit</button>
 </form>
