--- a/post.html
+++ b/post.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta http-equiv="Content-Type" charset="UTF-8">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 
 <body>
