integrating user registration API

--- a/login.html
+++ b/login.html
@@ -174,7 +174,7 @@
               <h1 class="title">Login</h1>
               <form id="form" method="post">
                 <label for="user-name">Username or email address *</label>
-                <input class="no-round-input" id="user-name" type="email" name="email">
+                <input class="no-round-input" id="email" type="email" name="email">
                 <label for="password">Password *</label>
                 <input class="no-round-input" id="password" type="password" name="password" >
                 <div class="account-method">
