--- a/post.html
+++ b/post.html
@@ -3,20 +3,19 @@
 
 <head>
 <meta http-equiv="Content-Type" charset="UTF-8">
-
 </head>
 
 <body>
 <form>
 <h1>Please type in new item data:</h1><br>
 <label class="add_label"><b>&nbsp;userId:&nbsp; </b></label>
-<input type="text" class="add_input" id="new_userId" name="new_userId" value="">
+<input type="number" class="add_input" id="new_userId" name="new_userId" value="">
 <br>
 <label class="add_label"><b>&nbsp;title:&nbsp;</b></label>
-<input type="email" class="add_input" id="new_title" name="new_title" value="">
+<input type="text" class="add_input" id="new_title" name="new_title" value="">
 <br>
 <label class="add_label"><b>&nbsp;body:&nbsp;</b></label>
-<input type="password" class="add_input" id="new_body" name="new_body" value="">
+<input type="text" class="add_input" id="new_body" name="new_body" value="">
 
 <button id="add_btn2" onclick = "New(event)">Submit</button>
 </form>
@@ -30,7 +29,7 @@
 
     console.log("Input Data: " + userid + " " + new_title + " " + new_body);
 
-    fetch('http://intriobasket.pexceptos.com/api/user/login', {
+    fetch('https://jsonplaceholder.typicode.com/posts', {
         method: 'POST',
         body: JSON.stringify({
             title: new_title,
