--- a/register.html
+++ b/register.html
@@ -186,7 +186,8 @@
 
                 <label for="gender">Gender</label>
 
-                <select class="no-round-input" id="gender" type="text" name="gender"> <option value="male"> Male </option>
+                <select class="no-round-input" id="gender" type="text" name="gender"> 
+                  <option value="male"> Male </option>
                   <option value="female"> Female </option>
                 
                 </select>
