integrating user registration API

--- a/404_error.html
+++ b/404_error.html
@@ -28,7 +28,7 @@
               <div class="col-12 col-md-6">
                 <div class="header-left d-flex flex-column flex-md-row align-items-center">
                   <p class="d-flex align-items-center"><i class="fas fa-envelope"></i>info@gmail.com</p>
-                  <p class="d-flex align-items-center"><i class="fas fa-phone"></i>+234XXXXXXXXXXX</p>
+                  <p class="d-flex align-items-center"><i class="fas fa-phone"></i>+234456789999</p>
                 </div>
               </div>
               <div class="col-12 col-md-6">
