--- a/contact_us.html
+++ b/contact_us.html
@@ -269,7 +269,7 @@
               <div class="col-12 col-md-4">
                 <div class="method-block"><i class="icon_mail_alt"></i>
                   <div class="method-block_text">
-                    <p> <span>Phone:</span>+234XXXXXXXXXXXXXXXXXX </p>
+                    <p> <span>Phone:</span>+234456789999</p>
                     <p><span>Mail:</span>info@gmail.com</p>
                   </div>
                 </div>
