integrating user registration API

--- a/register.html
+++ b/register.html
@@ -187,8 +187,8 @@
                 <label for="gender">Gender</label>
 
                 <select class="no-round-input" id="gender" type="text" name="gender"> 
-                  <option value="male"> Male </option>
-                  <option value="female"> Female </option>
+                  <option value="Male" id="Male" name="Male"> Male </option>
+                  <option value="Female" id="Female" name="Female"> Female </option>
                 
                 </select>
               
