integrating user registration API

--- a/index.html
+++ b/index.html
@@ -365,13 +365,13 @@
                 <div id="tab-1">
 
 
-                  <div id="root">
+                  <div id="foodlist" class="col-12">
                       
             
                   </div>
 
 
-<!--
+
                   <div class="row no-gutters-sm">
                     <div class="col-6 col-md-4 col-lg-3">
                       <div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
