--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <div id="tab-1">
 
 
-                  <div id="root" class="col-12">
+                  <div id="root" class="row no-gutters-sm">
                       
             
                   </div>
