integrating user registration API

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
     <link href="css/API/style.css" rel="stylesheet">
+      css/style.css
 
     </head>
 
@@ -365,7 +366,7 @@
                 <div id="tab-1">
 
 
-                  <div id="root" class="displayflex">
+                  <div id="root">
                       
             
                   </div>
