--- a/index.html
+++ b/index.html
@@ -458,7 +458,43 @@
                         </div>
                       </div> -->
                     </div>
-                    <div class="col-6 col-md-4 col-lg-3">
+
+
+                    <div class="col-6 col-md-4 col-lg-3" id="root">
+                      <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product02.png" alt=""></a>
+                        <h5 class="product-type">Oranges</h5>
+                        <h3 class="product-name">Pure Pineapple</h3>
+                        <h3 class="product-price">#14.00 
+                          
+                        </h3>
+                        <div class="product-select">
+                          <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
+                          <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                          <button class="add-to-compare round-icon-btn"><i class="fas fa-random"></i></button>
+                          <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
+                        </div>
+                      </div> -->
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-3" id="root">
+                      <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product02.png" alt=""></a>
+                        <h5 class="product-type">Oranges</h5>
+                        <h3 class="product-name">Pure Pineapple</h3>
+                        <h3 class="product-price">#14.00 
+                          
+                        </h3>
+                        <div class="product-select">
+                          <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
+                          <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                          <button class="add-to-compare round-icon-btn"><i class="fas fa-random"></i></button>
+                          <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
+                        </div>
+                      </div> -->
+                    </div>
+
+
+
+                    <!--<div class="col-6 col-md-4 col-lg-3">
                       <div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product07.png" alt=""></a>
                         <h5 class="product-type">Oranges</h5>
                         <h3 class="product-name">Apple</h3>
