--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
 
                   <div class="row no-gutters-sm">
-                    <div class="col-6 col-md-4 col-lg-3" id="root"> 
+                    <div class="flex-column" id="root"> 
                       <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
                         <h5 class="product-type">Oranges</h5>
                         <h3 class="product-name">Pure Pineapple</h3>
@@ -383,7 +383,7 @@
                         </div>
                       </div> -->
                     </div>
-                      <div class="col-6 col-md-4 col-lg-3" id="root"> 
+                      <div class="flex-column" id="root"> 
                         <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
                           <h5 class="product-type">Oranges</h5>
                           <h3 class="product-name">Pure Pineapple</h3>
@@ -398,7 +398,7 @@
                           </div>
                         </div> -->
                       </div>
-                      <div class="col-6 col-md-4 col-lg-3" id="root"> 
+                      <div class="flex-column" id="root"> 
                         <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
                           <h5 class="product-type">Oranges</h5>
                           <h3 class="product-name">Pure Pineapple</h3>
@@ -413,7 +413,7 @@
                           </div>
                         </div> -->
                       </div>
-                      <div class="col-6 col-md-4 col-lg-3" id="root"> 
+                      <div class="flex-column" id="root"> 
                         <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
                           <h5 class="product-type">Oranges</h5>
                           <h3 class="product-name">Pure Pineapple</h3>
@@ -428,7 +428,7 @@
                           </div>
                         </div> -->
                       </div>
-                      <div class="col-6 col-md-4 col-lg-3" id="root"> 
+                      <div class="]flex-column" id="root"> 
                         <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
                           <h5 class="product-type">Oranges</h5>
                           <h3 class="product-name">Pure Pineapple</h3>
@@ -443,7 +443,7 @@
                           </div>
                         </div> -->
                       </div>
-                      <div class="col-6 col-md-4 col-lg-3" id="root"> 
+                      <div class="flex-column" id="root"> 
                         <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
                           <h5 class="product-type">Oranges</h5>
                           <h3 class="product-name">Pure Pineapple</h3>
@@ -458,7 +458,7 @@
                           </div>
                         </div> -->
                       </div>
-                      <div class="col-6 col-md-4 col-lg-3" id="root"> 
+                      <div class="flex-column" id="root"> 
                         <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
                           <h5 class="product-type">Oranges</h5>
                           <h3 class="product-name">Pure Pineapple</h3>
