integrating user registration API

--- a/index.html
+++ b/index.html
@@ -365,6 +365,10 @@
                 </div>
                 <div id="tab-1">
 
+                <div id="root">
+
+                </div>
+
 
 
                   <div class="row no-gutters-sm">
