--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
 
 
-                  <div class="row no-gutters-sm">
+                 <!-- <div class="row no-gutters-sm">
                     <div class="col-6 col-md-4 col-lg-3">
                     <div id="root">
                       <!--<div class="product"><a class="product-img" href="shop_detail.html"><img src="assets/images/product/product01.png" alt=""></a>
