--- a/login.html
+++ b/login.html
@@ -275,12 +275,13 @@
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
     
 
-    <script type="text/javascript" src="assets/js/login.js"></script>
+   
 
  
 
   
 
-  
+  </body>
+  <script type="text/javascript" src="assets/js/login.js"></script>
 
 </html>
