--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -230,17 +230,13 @@
                       <div class="row">
                         <div class="col-3">
                           <div class="slide-img" data-slick="{&quot;vertical&quot;: true}">
-                            <div class="slide-img_block"><img src="assets/images/shop/zoom_img_1.png" alt="product image"></div>
-                            <div class="slide-img_block"><img src="assets/images/shop/zoom_img_2.png" alt="product image"></div>
-                            <div class="slide-img_block"><img src="assets/images/shop/zoom_img_3.png" alt="product image"></div>
-                          </div>
+                            <div class="slide-img_block"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image"></div>
+                            </div>
                         </div>
                         <div class="col-9">
                           <div class="big-img">
-                            <div class="big-img_block"><img src="assets/images/shop/zoom_img_1.png" alt="product image"></div>
-                            <div class="big-img_block"><img src="assets/images/shop/zoom_img_2.png" alt="product image"></div>
-                            <div class="big-img_block"><img src="assets/images/shop/zoom_img_3.png" alt="product image"></div>
-                          </div>
+                            <div class="big-img_block"><img src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="product image"></div>
+                            </div>
                         </div>
                       </div>
                     </div>
@@ -322,7 +318,7 @@
                             <div class="description-item_block">
                               <div class="row align-items-center justify-content-around">
                                 <div class="col-12 col-md-4">
-                                  <div class="description-item_img"><img class="img-fluid" src="assets/images/shop/shop_detail_full_img.png" alt="description image"></div>
+                                  <div class="description-item_img"><img class="img-fluid" src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="description image"></div>
                                 </div>
                                 <div class="col-12 col-md-6">
                                   <div class="description-item_text">
