integrating user registration API

--- a/index.html
+++ b/index.html
@@ -369,6 +369,11 @@
 
                 </div>
 
+                  <!--<div class="col-12 text-center order-5">
+                    <div class="d-flex justify-content-center" id="event-countdown"></div>
+                  </div>-->
+
+
 
                   <!-- <div class="col-6 col-md-4 col-lg-3">
                       <div class="product"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product02.png" alt=""></a>
@@ -1075,9 +1080,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 text-center order-5">
-              <div class="d-flex justify-content-center" id="event-countdown"></div>
-            </div>
+           
           </div>
         </div>
       </div>
