integrating user registration API

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </div>
                 <div id="tab-1">
 
-                <div id="root" class="product-item  d-flex rowwrap">
+                <div id="root" class="product-item  d-inline-flex rowwrap">
 
                 </div>
 
