--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
 
 
                 </div>
-                <div id=" row no-gutters-sm">
+                <div id="tab-1">
 
-                <div id="root" class="product-item  d-inline-flex rowwrap">
+                <div id="root" class="product-item  d-flex flex-sm-wrap">
 
                 </div>
 
