integrating user registration API

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
-    <link href="css/API/style.css" rel="stylesheet">
     
 
     </head>
@@ -365,7 +364,7 @@
                 </div>
                 <div id="tab-1">
 
-                <div id="root" class="product-item  d-flex flex-wrap rowwrap">
+                <div id="root" class="product-item  d-flex flex-wrap">
 
                 </div>
 
